fixed alignment fr

--- a/styles.css
+++ b/styles.css
@@ -182,7 +182,7 @@ html{
   color: #608a6f;
   font-weight: 3000;
   margin-top: -2%;
-  margin-left: -6%;
+  margin-left: -11%;
   
   
  }
@@ -191,7 +191,7 @@ html{
  {
   margin-bottom: 10%;
   margin-top: -5%;
-  margin-left: -4%;
+  margin-left: -9%;
   font-weight: 500;
   font-size: .4cm
   
@@ -201,7 +201,7 @@ html{
  }
  #button
  {
-  margin-left: -7%;
+  margin-left: -11%;
  }
 
  .aboutme {
